# MCP---learning-journey

./: README.md
book_review_api/: README.md  auth.py  books.db  utils.py
fastapi_book_review_api/: README.md  app.py  books.py  database.py  models.py  reviews.py  schemas.py
py-jsonrpc-websockets-poetry/: README.md  client.py  pyproject.toml  server.py
websocket_demo_project/websocket-demo/: .gitignore  README.md  client.py  pyproject.toml  server.py
